--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ pom.xml.asc
 /.nrepl-port
 figwheel_server.log
 resources/public/js/out/
+resources/public/uploads/
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
