--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ pom.xml.asc
 figwheel_server.log
 resources/public/js/out/
 resources/public/uploads/
+resources/public/sass/
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
